--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 dependencies {
     implementation 'org.testng:testng:7.9.0'
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.seleniumhq.selenium:selenium-java:4.19.1'
     implementation 'io.rest-assured:rest-assured:5.4.0'
     implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'ch.qos.logback:logback-classic:1.2.6'
