--- a/build.gradle
+++ b/build.gradle
@@ -23,3 +23,9 @@ dependencies {
 test {
     useTestNG()
   }
+task qa(type:Test) {
+    useTestNG()
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
+}
