--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .gradle
-build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -15,6 +14,8 @@ build/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+*.log
+*.png
 
 ### Eclipse ###
 .apt_generated
